--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>WDI Project 1</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <script type="text/javascript" src="scripts/app.js"></script>
   </head>
   <body>
-    <h1>Hello World!!!!</h1>
+    
+    <div class="grid">
+    </div>
+    <button>Play!</button>
   </body>
 </html>
