added game over function

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,10 +7,16 @@
     <script type="text/javascript" src="scripts/app.js"></script>
   </head>
   <body>
+    <div class="header">
+      <h1 class="game-title">Snake II</h1>
+      <button>Play!</button>
+    </div>
     
     <div class="grid">
     </div>
+
     <div class="points"></div>
-    <button>Play!</button>
+    <div class="message"></div>
+    
   </body>
 </html>
