added rebuild game function

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="header">
       <h1 class="game-title">Snake II</h1>
-      <button>Play!</button>
+      <button class="start">Play!</button>
     </div>
     
     <div class="grid">
