--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>WDI Project 1</title>
     <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script type="text/javascript" src="scripts/app.js"></script>
   </head>
   <body>
