--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,14 +10,16 @@
   <body>
     <div class="header">
       <h1 class="game-title">Snake II</h1>
+      <p class="instruct">Each time you eat a bug it's worth 15 noms. Nom away! (Om nom nom!)</p>
       <button class="start">Play!</button>
+      <div class="points"></div>
     </div>
+
     
+
     <div class="grid">
     </div>
 
-    <div class="points"></div>
-    <div class="message"></div>
     
   </body>
 </html>
