first initial commit for adding top score function

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -13,6 +13,7 @@
       <p class="instruct">Each time you eat a bug it's worth 15 noms. Nom away! (Om nom nom!)</p>
       <button class="start">Play!</button>
       <div class="points"></div>
+      <!-- <div class="top-score"></div> -->
     </div>
 
     
