changed title and added comments

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>WDI Project 1</title>
+    <title>Snake II</title>
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <script type="text/javascript" src="scripts/app.js"></script>
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
       <h1 class="game-title">Snake II</h1>
-      <p class="instruct">Each time you eat a bug it's worth 15 noms. Nom away! (Om nom nom!)</p>
+      <p class="instruct">Each bug you eat is worth some noms(Some more than others! :D). Nom away! (Om nom nom!)</p>
       <button class="start">Play!</button>
       <div class="points"></div>
       <div class="top-score">Top Score: </div>
